<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatePickTypeActivity">

    <TextView
        android:id="@+id/date_picker_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/date_picker_type"
        android:textColor="@color/picker_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/date_picker_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/picker_back"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/date_picker_title"
        app:layout_constraintLeft_toLeftOf="@+id/date_picker_title"
        app:layout_constraintTop_toTopOf="@+id/date_picker_title"
        app:srcCompat="@drawable/jpicker_back" />

    <Button
        android:id="@+id/date_picker_type_month"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_button_primary"
        android:text="@string/date_picker_type_month"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_title" />

    <Button
        android:id="@+id/date_picker_type_day"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_button_primary"
        android:text="@string/date_picker_type_day"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_type_month" />

    <Button
        android:id="@+id/date_picker_type_range"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_button_primary"
        android:text="@string/date_picker_type_range"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_type_day" />

    <Button
        android:id="@+id/date_picker_type_time"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_button_primary"
        android:text="@string/date_picker_type_time"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_type_range" />
</androidx.constraintlayout.widget.ConstraintLayout>