<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picker_background"
    tools:context=".CityPickerActivity">

    <TextView
        android:id="@+id/city_picker_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/picker_title"
        android:textColor="@color/picker_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/city_picker_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/picker_back"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/city_picker_title"
        app:layout_constraintLeft_toLeftOf="@+id/city_picker_title"
        app:layout_constraintTop_toTopOf="@+id/city_picker_title"
        app:srcCompat="@drawable/jpicker_back" />

    <TextView
        android:id="@+id/city_picker_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_card_border"
        android:padding="10dp"
        android:text="@string/picker_choice_province"
        android:textColor="@color/picker_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/jpicker_action"
        app:layout_constraintTop_toBottomOf="@+id/city_picker_title" />

    <TextView
        android:id="@+id/city_picker_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_card_normal"
        android:padding="10dp"
        android:text="@string/picker_choice_city"
        android:textColor="@color/picker_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/jpicker_action"
        app:layout_constraintTop_toBottomOf="@+id/city_picker_province" />

    <TextView
        android:id="@+id/city_picker_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/jpicker_card_normal"
        android:padding="10dp"
        android:text="@string/picker_choice_area"
        android:textColor="@color/picker_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/jpicker_action"
        app:layout_constraintTop_toBottomOf="@+id/city_picker_city" />

    <TextView
        android:id="@+id/city_picker_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/picker_choice_province"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/city_picker_area" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/city_picker_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_picker_choice" />
</androidx.constraintlayout.widget.ConstraintLayout>